package com.restaurant.model;

public class Dish {
    private final String name;
    private final double price;

    public Dish(String name, double price) {
        if (name == null || name.isBlank()) throw new IllegalArgumentException("Dish name is required");
        if (price < 0) throw new IllegalArgumentException("Price must be non-negative");
        this.name = name;
        this.price = price;
    }

    public String getName() { return name; }
    public double getPrice() { return price; }

    @Override
    public String toString() { return name + " (" + price + " грн)"; }
}
