package com.restaurant.model;

public enum OrderType {
    REGULAR, BULK
}
